[package]
name = "svg-to-png"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
resvg = { git = "https://github.com/RazrFalcon/resvg", rev = "093bfdd" }
wit-bindgen = "0.13"

[lib]
crate-type = ["cdylib", "rlib"]
